--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     <aws.sdk.version>2.40.9</aws.sdk.version>
     <bootstrap.version>5.3.8</bootstrap.version>
     <checkstyle-maven.version>3.6.0</checkstyle-maven.version>
-    <checkstyle.version>11.1.0</checkstyle.version>
+    <checkstyle.version>13.2.0</checkstyle.version>
     <com.azure.spring.version>6.0.0</com.azure.spring.version>
     <cyclonedx-maven.version>2.9.1</cyclonedx-maven.version>
     <cyclonedx.core.version>11.0.1</cyclonedx.core.version>
@@ -78,8 +78,9 @@
     <spotless-maven-plugin.version>3.2.1</spotless-maven-plugin.version>
     <spring-boot.version>3.5.11</spring-boot.version>
     <spring-vault.version>3.2.0</spring-vault.version>
-    <spring.cloud-version>2025.0.1</spring.cloud-version>
+    <spring.cloud-version>2025.0.0</spring.cloud-version>
     <spring.security.version>6.5.8</spring.security.version>
+    <springdoc-maven.version>1.5</springdoc-maven.version>
     <springdoc.version>2.8.15</springdoc.version>
     <system-stubs-jupiter.version>2.1.8</system-stubs-jupiter.version>
     <testcontainers-cypress.version>1.10.0</testcontainers-cypress.version>
@@ -122,7 +123,7 @@
         <groupId>io.netty</groupId>
         <artifactId>netty-bom</artifactId>
         <version>${io.netty.version}</version>
-        <!-- Explicitly define the Netty version to be in sync with the Azure one otherwise a warning is shown -->
+        <!-- Explicitly define the Netty version to be in sync with the Azure one, otherwise a warning is shown -->
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -533,7 +534,7 @@
       <plugin>
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-maven-plugin</artifactId>
-        <version>${springdoc.version}</version>
+        <version>${springdoc-maven.version}</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
