--- a/pom.xml
+++ b/pom.xml
@@ -527,13 +527,24 @@
             </configuration>
           </execution>
           <execution>
+            <id>npm ci</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <arguments>ci --no-audit --no-fund --prefer-online</arguments>
+              <workingDirectory>js</workingDirectory>
+            </configuration>
+          </execution>
+          <execution>
             <id>npm install</id>
             <goals>
               <goal>npm</goal>
             </goals>
             <phase>generate-resources</phase>
             <configuration>
-              <arguments>install</arguments>
+              <arguments>cache clean --force</arguments>
               <workingDirectory>js</workingDirectory>
             </configuration>
           </execution>
