--- a/k8s/secret-challenge-deployment.yml
+++ b/k8s/secret-challenge-deployment.yml
@@ -34,6 +34,8 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+            - containerPort: 8090
+              protocol: TCP
           readinessProbe:
             httpGet:
               path: '/actuator/health/readiness'
