--- a/azure/k8s/lb.yml
+++ b/azure/k8s/lb.yml
@@ -7,5 +7,11 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
+      protocol: TCP
+      name: http
+    - port: 81
+      targetPort: 8090
+      protocol: TCP
+      name: MCP
   selector:
     app: secret-challenge
