--- a/gcp/k8s/k8s-gke-service.yaml
+++ b/gcp/k8s/k8s-gke-service.yaml
@@ -11,5 +11,10 @@ spec:
     - port: 80
       targetPort: 8080
       protocol: TCP
+      name: http
+    - port: 81
+      targetPort: 8090
+      protocol: TCP
+      name: MCP
   selector:
     app: secret-challenge
